# quasar

./: .env.example  .gitignore  .replit  README.md  agent_core.py  agentic_quantum_app.py  ai_agent.py  ai_helpers.py  api.py  autonomous_decision_system.py  basic_app.py  browser_implementation.js  config.py  enhanced_autonomous_agent.py  enhanced_main.py  enhanced_quantum_agent_demo.py  generate_pwa_icons.py  hello.py  init_project.py  install_deps.py  main.py  main_agent.py  main_content_extractor.py  manifest.json  offline.html  pwa.js  pwa_integration.py  pyproject.toml  q3_agent.py  qa3_agent.py  quantum_agent_demo.py  quantum_core.py  quantum_module.py  quantum_web_integration.py  replit.nix  simple_quantum_agent.py  simple_quantum_core.py  simplified_agent.py  static_file_server.py  streamlit_app.py  (+4 more)
.streamlit/: config.toml  styles.css
agents/: __init__.py  classical_agent.py  q3a_agent.py  quantum_agent.py
attached_assets/: Pasted--Markdown-Generation-Clean-Markdown-Generates-clean-structured-Markdown-with-accurate-format-1740478540476.txt  Pasted--task-Analyze-market-trends-in-tech-sector-timestamp-NULL-processed-features-0-0-199304-1740474292422.txt  Pasted--uv-add-crawl4ai-0-4-0-Resolving-dependencies-Resol-1740478007783.txt  Pasted-Analysis-Results-Comprehensive-Report-on-Job-Market-Trends-1-Key-Job-Market-Trends-The-current-1740483412859.txt  Pasted-Browser-use-is-the-easiest-way-to-connect-your-AI-agents-with-the-browser-See-what-others-are-b-1740392723910.txt  Pasted-I-have-this-research-done-for-a-quantum-accelerated-ai-agent-framework-I-want-you-to-use-the-resear-1740391695729.txt  (+9 more)
components/: demo.py  metrics.py  (+1 more)
(+52 files in other folders)
