[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.0.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pennylane>=0.35.1",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
]
