[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.1",
    "datasetrising>=1.0.4",
    "gymnasium>=1.0.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pennylane>=0.35.1",
    "playwright>=1.50.0",
    "plotly>=6.0.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.27",
    "streamlit>=1.42.2",
]
