[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.47.1",
    "asyncio>=3.4.3",
    "browser-use==0.1.1",
    "datasetrising>=1.0.4",
    "gymnasium>=1.0.0",
    "langchain-openai>=0.3.7",
    "langchain>=0.0.27",
    "langchain-anthropic>=0.3.8",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pennylane>=0.35.1",
    "playwright>=1.50.0",
    "plotly>=6.0.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv>=1.0.1",
    "sqlalchemy==2.0.27",
    "streamlit>=1.42.2",
    "twilio>=9.4.6",
    "aiohttp>=3.11.12",
    "azure-quantum>=0.27.258160",
    "pennylane-qiskit>=0.36.0",
    "beautifulsoup4>=4.13.3",
    "requests>=2.31.0",
]
